update marketing expart section

--- a/client protal/marketing-expart.html
+++ b/client protal/marketing-expart.html
@@ -209,6 +209,39 @@
                         </div>
 
                     </div>
+                    <div class="marketing_expart text-center">
+                        <img src="assets/marketing_expart/expart_4.png" alt="">
+                        <div class="mt-4">
+                            <h4 class="expart_name">Sam Wilson</h4>
+                            <p class="expart_position">Darrell Steward</p>
+                            <h6 class="expart_contact mt-4">+1 315 636 4807</h6>
+                            <h6 class="expart_email">contact@offshoreclippingpath.com</h6>
+                            <h6 class="expart_contact">offshore.clipping</h6>
+                        </div>
+
+                    </div>
+                    <div class="marketing_expart text-center">
+                        <img src="assets/marketing_expart/expart_4.png" alt="">
+                        <div class="mt-4">
+                            <h4 class="expart_name">Sam Wilson</h4>
+                            <p class="expart_position">Darrell Steward</p>
+                            <h6 class="expart_contact mt-4">+1 315 636 4807</h6>
+                            <h6 class="expart_email">contact@offshoreclippingpath.com</h6>
+                            <h6 class="expart_contact">offshore.clipping</h6>
+                        </div>
+
+                    </div>
+                    <div class="marketing_expart text-center">
+                        <img src="assets/marketing_expart/expart_4.png" alt="">
+                        <div class="mt-4">
+                            <h4 class="expart_name">Sam Wilson</h4>
+                            <p class="expart_position">Darrell Steward</p>
+                            <h6 class="expart_contact mt-4">+1 315 636 4807</h6>
+                            <h6 class="expart_email">contact@offshoreclippingpath.com</h6>
+                            <h6 class="expart_contact">offshore.clipping</h6>
+                        </div>
+
+                    </div>
                    
 
 
