--- a/Mywork.html
+++ b/Mywork.html
@@ -433,6 +433,7 @@
 
                 <!-- project show in picture start -->
                 <div class="mywork-image-folder mx-4 mt-4">
+                 
                   <div class="image-container">
                     <div class="d-flex justify-content-end py-2 px-3">
                       <input
@@ -442,12 +443,26 @@
                       />
                     </div>
                     <div class="pt-3">
-                      <div>
+                      <div class="image_content">
                         <img
                           src="assets/New folder/IMG_20210722_202210.jpg"
                           alt=""
                           class="project-image"
                         />
+                        <div class="download_icon">
+                          <span class="project_zoom_icon">
+                            <i
+                              class="fa-solid fa-magnifying-glass-plus fa-sm"
+                              style="color: #f7f7f7"
+                            ></i>
+                          </span>
+                          <span class="ml-2 project_download_icon">
+                            <i
+                              class="fa-solid fa-download"
+                              style="color: #ffffff"
+                            ></i>
+                          </span>
+                        </div>
                       </div>
 
                       <div
@@ -472,12 +487,26 @@
                       />
                     </div>
                     <div class="pt-3">
-                      <div>
+                      <div class="image_content">
                         <img
                           src="assets/New folder/IMG_20210722_202210.jpg"
                           alt=""
                           class="project-image"
                         />
+                        <div class="download_icon">
+                          <span class="project_zoom_icon">
+                            <i
+                              class="fa-solid fa-magnifying-glass-plus fa-sm"
+                              style="color: #f7f7f7"
+                            ></i>
+                          </span>
+                          <span class="ml-2 project_download_icon">
+                            <i
+                              class="fa-solid fa-download"
+                              style="color: #ffffff"
+                            ></i>
+                          </span>
+                        </div>
                       </div>
 
                       <div
