--- a/Mywork.html
+++ b/Mywork.html
@@ -452,7 +452,7 @@
                         <div class="download_icon">
                           <span class="project_zoom_icon">
                             <i
-                              class="fa-solid fa-magnifying-glass-plus fa-sm"
+                              class="fa-solid fa-magnifying-glass-plus fa-sm my-work-project-icon"
                               style="color: #f7f7f7"
                             ></i>
                           </span>
@@ -496,7 +496,7 @@
                         <div class="download_icon">
                           <span class="project_zoom_icon">
                             <i
-                              class="fa-solid fa-magnifying-glass-plus fa-sm"
+                              class="fa-solid fa-magnifying-glass-plus fa-sm my-work-project-icon"
                               style="color: #f7f7f7"
                             ></i>
                           </span>
@@ -540,7 +540,7 @@
                         <div class="download_icon">
                           <span class="project_zoom_icon">
                             <i
-                              class="fa-solid fa-magnifying-glass-plus fa-sm"
+                              class="fa-solid fa-magnifying-glass-plus fa-sm my-work-project-icon"
                               style="color: #f7f7f7"
                             ></i>
                           </span>
@@ -566,13 +566,14 @@
                       </div>
                     </div>
                   </div>
+                  
                 </div>
                 <!-- project show in picture end -->
               </div>
             </div>
             <!-- all project main contenter end -->
 
-            <div class="mywork-side-details">
+            <div class="mywork-side-details1">
               <div class="date-time">
                 <div class="task-timer">TASK TIMER</div>
                 <div class="calendar d-flex justify-content-around">
@@ -664,6 +665,47 @@
                 </div>
               </div>
             </div>
+
+            <div class="mywork-side-details2">
+              <div class="d-flex justify-content-end mt-2 mb-5">
+                <img
+                  src="assets/All Project/close-btn.png"
+                  alt=""
+                  class="mywork-close-button"
+                />
+              </div>
+
+              <div class="d-flex justify-content-center">
+                <div class="image-container-details">
+                  <div class="mt-3">
+                    <img
+                      src="assets/New folder/ON07095660__ALT05__4129116214_dt5.jpg"
+                      alt=""
+                      class="project-image"
+                    />
+                  </div>
+                  <p class="mt-2">Lorem ipsum</p>
+                </div>
+              </div>
+
+              <div class="mt-3 details-text ml-3">
+                <p class="mb-3 mt-4">Type: Folder</p>
+                <p>Image Quantity: 26</p>
+                <p>Size: 150 Byte</p>
+                <p>
+                  Date Created: <br />
+                  MM/DD/YYYY <br />
+                  XX:XX:XX AM
+                </p>
+                <p>
+                  Date Modified: <br />
+                  MM/DD/YYYY <br />
+                  XX:XX:XX AM
+                </p>
+              </div>
+            </div>
+
+             
           </div>
         </div>
          <!-- upload file module  start-->
