--- a/common.html
+++ b/common.html
@@ -168,7 +168,7 @@
 
 
             <!-- chat start  -->
-            <div  class="hidden_chat chat_content">
+            <div class="hidden_chat chat_content">
                 <div class="d-flex justify-content-between align-items-center chat-title">
                     <div>Your Chat</div>
                     <div class="chat-close-btn"><img src="assets/chat/vector.png" alt=""></div>
@@ -245,54 +245,98 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- chat-left  -->
-                        <div class="mx-3 mt-4 chat-left">
+
+                        <!-- chate 1 -->
+                        <div>
                             <span class="chat-details-time">Jan 12,2023, 4.55pm</span>
-                            <div class="chat-details-person-images">
-                                <img src="assets/RICSU 1.png" alt="">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                        </div>
+                            <!-- chat-left  -->
+                            <div class=" chat-left mx-3">
+                                <div>
 
-                        <!-- chat-right -->
-                        <div class="chat-right mx-3">
-                            <div>
-                                <div class="chat-right-imgage">
-                                    <p>Lorem ipsum dolor sit amet.</p>
-                                    <img src="assets/RICSU 1.png" alt="">
+                                    <div class="chat-details-person-images">
+                                        <img src="assets/RICSU 1.png" alt="">
+                                        <p>Lorem, </p>
+                                    </div>
                                 </div>
-                                <p class="chat-seen">seen</p>
+                                <div></div>
+                            </div>
+
+                            <!-- chat-right -->
+                            <div class="chat-right mx-3">
+                                <div></div>
+                                <div>
+                                    <div class="chat-right-imgage">
+                                        <p>Lorem ipsum dolor sit amet.</p>
+                                        <img src="assets/RICSU 1.png" alt="">
+                                    </div>
+                                    <p class="chat-seen">seen</p>
+                                </div>
                             </div>
                         </div>
-
-                         <!-- chat-left  -->
-                         <div class="mx-3 mt-4 chat-left">
+                        <!-- chate 2 -->
+                        <div>
                             <span class="chat-details-time">Jan 12,2023, 4.55pm</span>
-                            <div class="chat-details-person-images">
-                                <img src="assets/RICSU 1.png" alt="">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                        </div>
+                            <!-- chat-left  -->
+                            <div class=" chat-left mx-3">
+                                <div>
 
-                        <!-- chat-right -->
-                        <div class="chat-right mx-3">
-                            <div>
-                                <div class="chat-right-imgage">
-                                    <p>Lorem ipsum dolor sit amet.</p>
-                                    <img src="assets/RICSU 1.png" alt="">
+                                    <div class="chat-details-person-images">
+                                        <img src="assets/RICSU 1.png" alt="">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita in
+                                            excepturi dolores aspernatur possimus natus animi officiis nesciunt soluta
+                                            earum ea unde rerum eum voluptatibus quod debitis, saepe omnis ducimus.</p>
+                                    </div>
                                 </div>
-                                <p class="chat-seen">seen</p>
+                                <div></div>
+                            </div>
+
+                            <!-- chat-right -->
+                            <div class="chat-right mx-3">
+                                <div></div>
+                                <div>
+                                    <div class="chat-right-imgage">
+                                        <p>Lorem ipsum dolor sit amet.</p>
+                                        <img src="assets/RICSU 1.png" alt="">
+                                    </div>
+                                    <p class="chat-seen">Seen</p>
+                                </div>
                             </div>
                         </div>
-                        
+                          <!-- chate 3 -->
+                        <div>
+                            <span class="chat-details-time">Jan 12,2023, 4.55pm</span>
+                            <!-- chat-left  -->
+                            <div class=" chat-left mx-3">
+                                <div>
+
+                                    <div class="chat-details-person-images">
+                                        <img src="assets/RICSU 1.png" alt="">
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. .</p>
+                                    </div>
+                                </div>
+                                <div></div>
+                            </div>
+
+                            <!-- chat-right -->
+                            <div class="chat-right mx-3">
+                                <div></div>
+                                <div>
+                                    <div class="chat-right-imgage">
+                                        <p>Lorem ipsum dolor sit amet.</p>
+                                        <img src="assets/RICSU 1.png" alt="">
+                                    </div>
+                                    <p class="chat-seen">Seen</p>
+                                </div>
+                            </div>
+                        </div>
 
                         
-
                     </div>
 
                     <div class="mx-3 mb-3">
                         <div class="input-group">
-                            <textarea placeholder="Type your message..." class="form-control rounded mr-2" id="chat_textarea"></textarea>
+                            <textarea placeholder="Type your message..." class="form-control rounded mr-2"
+                                id="chat_textarea"></textarea>
                             <button type="button" class="btn btn-primary">
                                 <i class="fa-solid fa-greater-than fa-sm" style="color: #e5e7eb;"></i>
                             </button>
@@ -307,7 +351,7 @@
                 <div id="group-modal">
                     <div class="d-flex justify-content-between align-items-center group-title">
                         <h5>Create Group</h5>
-                        <span  class="modal-group-icon group-modal-close">&times;</span>
+                        <span class="modal-group-icon group-modal-close">&times;</span>
                     </div>
 
                     <form action="" class="mx-3 my-3">
