chat style update

--- a/common.html
+++ b/common.html
@@ -322,7 +322,7 @@
                                 <div></div>
                                 <div>
                                     <div class="chat-right-imgage">
-                                        <p>Lorem ipsum dolor sit amet.</p>
+                                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut hic aut earum magni, incidunt assumenda placeat doloribus aliquam sunt ipsam reprehenderit ea praesentium id eum, porro, officiis aspernatur minima nostrum.</p>
                                         <img src="assets/RICSU 1.png" alt="">
                                     </div>
                                     <p class="chat-seen">Seen</p>
