--- a/leave/with_Pay_Leave_List.html
+++ b/leave/with_Pay_Leave_List.html
@@ -289,15 +289,45 @@
             <!-- nan-munu end-->
 
             <div class="leave-main-container">
-                <p>With Pay Leave List</p>
-                <hr>
-                <div>
-                    <div class="">
-
-                    </div>
+                <div class="mx-3 pt-3">
+                    <p>With Pay Leave List</p>
+                    <hr>
                     <div>
+                        <div class="employee-profile">
+                            <div>
+                                <img src="../assets/owp-ppl7-1.jpg" alt="">
+                            </div>
+                            <div class="employee-name">
+                                <small>005</small>
+                                <h3>Lorem ipsum</h3>
+                                <p>Graphic Designer</p>
+                            </div>
 
+                            <div class="employee-date-section">
+                                <div class="employee-profile-date">
+                                    <p>Date</p>
+                                    <h6><span>:</span> 31-May-2023</h6>
+                                </div>
+                            </div>
+
+                        </div>
+                        <hr>
+
+                        <div class="remaining-leave_info">
+                            <div class="leave-info-content">
+                                <p>Remaining Leave Info</p>
+                                <div class="d-flex">
+                                    <a href="">View Previous History</a>
+                                    <button>Apply</button>
+                                </div>
+
+                            </div>
+
+
+
+                        </div>
                     </div>
+
                 </div>
             </div>
 
