--- a/Mywork.html
+++ b/Mywork.html
@@ -127,7 +127,7 @@
       <section class="main-content-part">
         <!-- nan-munu start -->
         <nav class="navbar navbar-expand-lg navbar-light navbar-menu">
-          <a class="navbar-brand d-lg-none" href="#">Navbar</a>
+          <a class="navbar-brand d-lg-none" href="#">Offshore IT</a>
           <!-- <button class="btn side-menu-btn">
                     <i class="fas fa-stream"></i>
                   </button> -->
