add schedule 2 page

--- a/leave/dashboard.html
+++ b/leave/dashboard.html
@@ -124,134 +124,142 @@
     <section class="main-content-part">
       <!-- nav-munu -->
       <nav class="navbar navbar-expand-lg navbar-light navbar-menu">
+        <button class="btn side-menu-btn d-lg-none mr-3">
+            <i class="fas fa-stream"></i>
+        </button>
         <a class="navbar-brand d-lg-none" href="#">
-          Navbar
+            Offshore IT
         </a>
 
-        <div class=" nav-profile-img d-lg-none" style="display: block;">
-          <div class="dropdown">
-            <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <img src="../../assets/RICSU 1.png" alt="" class="loging-user" />
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
 
-        </div>
 
 
         <div class="nav-notification">
-          <button class="btn side-menu-btn d-lg-none">
-            <i class="fas fa-stream"></i>
-          </button>
-          <div class="mr-lg-3 notification-content d-lg-none" style="display: block;">
-            <a type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <img src="../../assets/vail.png" alt="" />
-              <img src="../../assets/Vector (1).png" alt="" class="notification-icon" />
-            </a>
-            <div class="dropdown-menu dropdown-menu-right">
-              <div class="d-flex justify-content-between notification-item">
-                <div>
-                  <p>Notification <span>(2)</span></p>
+
+            <div class="mr-lg-3 notification-content d-lg-none" style="display: block;">
+                <a type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                    <img src="../assets/vail.png" alt="" />
+                    <img src="../assets/Vector (1).png" alt="" class="notification-icon" />
+                </a>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <div class="d-flex justify-content-between notification-item">
+                        <div>
+                            <p>Notification <span>(2)</span></p>
+                        </div>
+                        <div>
+                            <p>total</p>
+                        </div>
+                    </div>
+                    <div class="p-2">
+                        <div class="d-lg-flex d-md-flex justify-content-start align-items-center">
+                            <img src="../assets/RICSU 1.png" alt="" class="notification-image" />
+                            <p class="pl-lg-3">Lorem ipsum dolor sit amet.</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                  <p>total</p>
-                </div>
-              </div>
-              <div class="p-2">
-                <div class="d-lg-flex d-md-flex justify-content-start align-items-center">
-                  <img src="../../assets/RICSU 1.png" alt="" class="notification-image" />
-                  <p class="pl-lg-3">Lorem ipsum dolor sit amet.</p>
-                </div>
-              </div>
             </div>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
 
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="/project.html">Project</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">User</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Accounts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Schedule</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Lead</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Attendance</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Human Resource</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2 active_top_nav" aria-current="page" href="#">Leave</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Payroll</a>
-            </li>
-          </ul>
-          <div class="d-flex align-items-center justify-content-center">
-            <div class="mr-lg-3 notification-content">
-              <a type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img src="../../assets/vail.png" alt="" />
-                <span class="notification-icons">12</span>
-              </a>
-              <div class="dropdown-menu dropdown-menu-right">
-                <div class="d-flex justify-content-between notification-item">
-                  <div>
-                    <p>Notification <span>(2)</span></p>
-                  </div>
-                  <div>
-                    <p>total</p>
-                  </div>
+        <div class="collapse navbar-collapse nav-sm-background" id="navbarSupportedContent">
+            <div class="nav-profile-img d-lg-none text-center pt-3" style="display: block;">
+                <div class="dropdown">
+                    <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="../assets/RICSU 1.png" alt="" class="loging-user" />
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-center dropdown-menu-custom text-center"
+                        aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
                 </div>
-                <div class="p-2">
-                  <div class="d-lg-flex d-md-flex justify-content-start align-items-center">
-                    <img src="../../assets/RICSU 1.png" alt="" class="notification-image" />
-                    <p class="pl-3">Lorem ipsum dolor sit amet.</p>
-                  </div>
+
+            </div>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page"
+                        href="/project.html">Project</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Client</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">User</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Accounts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Schedule</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Lead</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Attendance</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Human Resource</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Leave</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active menu-link mr-2" aria-current="page" href="#">Payroll</a>
+                </li>
+            </ul>
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="mr-lg-3 notification-content">
+                    <a type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                        <img src="../assets/vail.png" alt="" />
+                        <img src="../assets/Vector (1).png" alt="" class="notification-icon" />
+
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <div class="d-flex justify-content-between notification-item">
+                            <div>
+                                <p>Notification <span>(2)</span></p>
+                            </div>
+                            <div>
+                                <p>total</p>
+                            </div>
+                        </div>
+                        <div class="p-2">
+                            <div class="d-lg-flex d-md-flex justify-content-start align-items-center">
+                                <img src="assets/RICSU 1.png" alt="" class="notification-image" />
+                                <p class="pl-3">Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
 
-            <div class="position-lg-relative right-3 nav-profile-img">
-              <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img src="../../assets/RICSU 1.png" alt="" class="loging-user" />
-              </a>
-              <div class="dropdown-menu dropdown-menu-right">
-                <button class="dropdown-item" type="button">Action</button>
-                <button class="dropdown-item" type="button">
-                  Another action
-                </button>
-                <button class="dropdown-item" type="button">
-                  Something else here
-                </button>
-              </div>
-            </div>
+                <div class="position-lg-relative right-3 nav-profile-img">
+                    <a type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="../assets/RICSU 1.png" alt="" class="loging-user" />
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <button class="dropdown-item" type="button">Action</button>
+                        <button class="dropdown-item" type="button">
+                            Another action
+                        </button>
+                        <button class="dropdown-item" type="button">
+                            Something else here
+                        </button>
+                    </div>
+                </div>
 
-          </div>
+            </div>
         </div>
-      </nav>
-      <!-- nan-munu -->
+    </nav>
+    <!-- nan-munu -->
 
       <!-- card section start -->
       <div class="card-contaniner">
