--- a/Schedule/shift_wise_employee_report.html
+++ b/Schedule/shift_wise_employee_report.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="style.css" />
+
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -104,17 +105,17 @@
                         <span class="ml-2">Sch. Exchange List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link active_sidnav" href="#">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="../assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image" />
+                        <img src="../assets/Shape.svg" alt="" class="sidebar-icon-image" />
                         <span class="ml-2">Sch. Exchange Approve</span>
                     </div>
                 </a>
                 <!-- Reportdropdown menu start  -->
                 <div class="dropdowns_menu nav-sidevar-link">
-                    <a class="nav-link">
+                    <a class="nav-link  active_sidnav">
                         <div class="link-icon">
-                            <img src="../assets/Shape.svg" alt="" class="sidebar-icon-image ">
+                            <img src="../assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                             <span class="ml-2">
                                 Report
                             </span>
@@ -124,14 +125,14 @@
                         </div>
                     </a>
 
-                    <div class="dropdowns_sub_menu mb-3">
+                    <div class="dropdowns_sub_menu mb-3" style="display: block;">
                         <a class="nav-link " href="#" id="setup-menu-link">
                             <div class="link-icon ml-3">
                                 <span class="sidebar-link-text schedule-dropdowns-link" id="setup-link-text">Schedule
                                     Exchange Report</span>
                             </div>
                         </a>
-                        <a class="nav-link" href="#" id="setup-menu-link">
+                        <a class="nav-link  active_sidnav" href="#" id="setup-menu-link">
                             <div class="link-icon ml-3">
                                 <span class="sidebar-link-text schedule-dropdowns-link" id="setup-link-text">Shift Wise
                                     Employee Report</span>
@@ -157,7 +158,6 @@
         <!-- main content section  -->
         <section class="main-content-part">
             <!-- nav-munu -->
-
             <nav class="navbar navbar-expand-lg navbar-light navbar-menu">
                 <button class="btn side-menu-btn d-lg-none mr-3">
                     <i class="fas fa-stream"></i>
@@ -296,128 +296,108 @@
             </nav>
             <!-- nan-munu -->
 
-            <div class="leave-application-container">
-               
+            <div class="mx-4 mt-4">
+                <p class="shudele-table-title">
+                    Shift Wise Employee Report
+                </p>
+                <hr>
+                <div>
+                    <div class="d-lg-flex justify-content-between align-items-center">
+                        <input type="date" name="" id="">
+                        <div>
+                            <div>
+                                <span>
+                                    <i class="fa-solid fa-circle fa-2xs" style="color: #008000;"></i>
+                                    <span>Exchanged</span>
+                                </span>
+                                <span class="ml-2">
+                                    <i class="fa-solid fa-circle fa-2xs" style="color: #45818E;"></i>
+                                    <span>Merged</span>
+                                </span>
+                                <span class="ml-2">
+                                    <i class="fa-solid fa-circle fa-2xs" style="color: 
+                                    #74D4E6;"></i>
+                                    <span>Morning</span>
+                                </span>
+                                <span class="ml-2">
+                                    <i class="fa-solid fa-circle fa-2xs" style="color: 
+                                    #9C8868;"></i>
+                                    <span>Evening</span>
+                                </span>
+                                <span class="ml-2">
+                                    <i class="fa-solid fa-circle fa-2xs" style="color:#897790;"></i>
+                                    <span>Night</span>
+                                </span>
+                                <span class="ml-2">
+                                    <i class="fa-solid fa-circle fa-2xs" style="color:#FFA500;"></i>
+                                    <span>Leave</span>
+                                </span>
+                                <span class="ml-2">
+                                    <i class="fa-solid fa-circle fa-2xs" style="color:#FF0000;"></i>
+                                    <span>Absent</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table-style">
+                        <table id="sch-employee-table" class="mt-4">
+                            <tr>
+                                <th>Morning Shift <span>(10)</span></th>
+                                <th>Evening Shift <span>(10)</span></th>
+                                <th>Night Shift <span>(10)</span></th>
+                                <th>Merged Shift <span>(10)</span></th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span>
+                                        <i class="fa-solid fa-circle fa-2xs" style="color: #74D4E6;"></i>
+                                    </span>
+                                    <span>Alfreds Futterkiste</span>
+                                </td>
+                                <td>
+                                    <span>
+                                        <i class="fa-solid fa-circle fa-2xs" style="color: #9C8868;"></i>
+                                    </span>
+                                    <span>Maria Anders</span>
+                                </td>
+                                <td>
+                                    <span>
+                                        <i class="fa-solid fa-circle fa-2xs" style="color: #897790;;"></i>
+                                    </span>
+                                    <span>Germany</span>
+                                </td>
 
-                <!-- data table start  -->
-                <div class="mt-4 mx-4 data-table">
-                    <p class="shudele-table-title">Schedule Exchange Approve</p>
-                    <hr>
-                    <div class="table-parrent mt-4">
-                        <table id="example" class="display" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th class="Project-table-heading">Apply Date</th>
-                                    <th class="Project-table-heading">From Employee</th>
-                                    <th class="Project-table-heading">To Employee</th>
-                                    <th class="Project-table-heading">From Shift</th>
-                                    <th class="Project-table-heading">To Shift</th>
-                                    <th class="Project-table-heading">Status</th>
-                                    <th class="Project-table-heading text-center">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>001</td>
-                                    <td>141.223.8035</td>
-                                    <td>Jena</td>
-                                    <td>pbsdeUdFsc</td>
-                                    <td>Specific</td>
-                                    <td>Active</td>
-                                    <td class="text-center">
-                                        <div class="leave-aprove-action">
-                                            <a type="button" data-toggle="dropdown" aria-haspopup="true"
-                                                aria-expanded="false" >
-                                                :
-                                            </a>
-                                            <div
-                                                class="dropdown-menu dropdown-menu-right bg-primary text-white text-center p-1 ">
-                                                <a class="text-white  text-decoration-none" data-toggle="sch-approve-ftp-overlay"
-                                                data-target="sch-approve-ftp-info" href="#"
-                                                    data-toggle="overlay" data-target="overlay-info">View Details</a>
-                                            </div>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span>
+                                        <i class="fa-solid fa-circle fa-2xs" style="color: #74D4E6;"></i>
+                                    </span>
+                                    <span>Alfreds Futterkiste</span>
+                                </td>
+                                <td>
+                                    <span>
+                                        <i class="fa-solid fa-circle fa-2xs" style="color: #9C8868;"></i>
+                                    </span>
+                                    <span>Maria Anders</span>
+                                </td>
+                                <td>
+                                    <span>
+                                        <i class="fa-solid fa-circle fa-2xs" style="color: #897790;;"></i>
+                                    </span>
+                                    <span>Germany</span>
+                                </td>
 
-                                        </div>
-
-                                    </td>
-
-                                </tr>
+                                <td>-</td>
+                            </tr>
 
 
-
-                            </tbody>
                         </table>
                     </div>
                 </div>
-                <!-- data table end  -->
-
-                <!--add Schedule Exchange List-->
-                <div class="sch-approve-overlay-info" id="sch-approve-ftp-info">
-                    <div class="sch-approve-content-info">
-                        <div class="d-flex justify-content-between align-items-center title">
-                            <div>Schedule Exchange Application</div>
-                            <div class="ftp-close-content">
-                                <i class="fa-solid fa-xmark close-icon"></i>
-                            </div>
-                        </div>
-                        <div class="from-content">
-
-                            <div class="schedule-exchange-list-profile">
-                                <img src="../../assets/owp-ppl7-1.jpg" alt="">
-                                <div class="employee-name">
-                                    <small>005</small>
-                                    <h3>Lorem ipsum</h3>
-                                    <p>Graphic Designer</p>
-                                </div>
-                            </div>
-                            <hr>
-
-
-                            <form >
-                                <p>Exchange Reqeust Details</p>
-                                <div>
-                                    <label for="">Reqeust Date<span class="text-danger">*</span></label> <br>
-                                    <input type="date" name="" id="" class="from-input">
-                                </div>
-                                <div class="mt-3">
-                                    <label for="">From Shift<span class="text-danger">*</span></label> <br>
-                                    <input type="text" name="" id="" class="from-input">
-                                </div>
-                                <div class="mt-3">
-                                    <label for="">To Shift<span class="text-danger">*</span></label> <br>
-                                    <input type="text" name="" id="" class="from-input">
-                                </div>
-                                <div class="mt-3">
-                                    <label for="">Select Employee <span class="text-danger">*</span></label> <br>
-                                    <select name="Status" id="active" class="from-input">
-                                        <option value="Active" class="select-input">Select</option>
-                                        <option value="Inactive" class="select-input">Inactive</option>
-                                    </select>
-                                </div>
-                                <div class="mt-3">
-                                    <label for="">Purpose of Exchange</label> <br>
-                                    <textarea name="" id="" cols="30" rows="10"
-                                        class="schedule-from-textarea"></textarea>
-                                </div>
-
-                                <div class="mt-3">
-                                    <label for="">Attached File<span class="text-danger">*</span></label> <br>
-                                    <input type="file" name="" id="" class="schedule-from-input-file">
-                                </div>
-                                <div class="schedule-submit-btn">
-                                    <div class="d-flex justify-content-end">
-                                        <button class="btn-1">Submit</button>
-                                        <button class="btn-2">Cencle</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-
-
-                    </div>
-                </div>
-                <!-- add Schedule Exchange List -->
             </div>
+
 
 
 
