Update  user Dashboard

--- a/User/dashboard.html
+++ b/User/dashboard.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="user_content">
                     <h3>User Type Breakdown</h3>
-                    <canvas id="myPieChart" style="width: 100%"></canvas>
+                    <canvas id="myPieChart"></canvas>
                 </div>
                 <div class="user_content">
                     <h3>Customer Activity</h3>
